Fix alignment

--- a/src/pages/standard.css
+++ b/src/pages/standard.css
@@ -319,7 +319,7 @@
 }
 
 .titleText {
-    text-align: center;    
+    text-align: left;    
 }
 
 
